--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Finances &mdash; Website Template by Colorlib</title>
+    <title>SFTS Group</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -49,63 +49,9 @@
     </div>
 
 
-    <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
-
-        <div class="container">
-            <div class="row align-items-center">
-
-                <div class="col-6 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Finances<span
-                            class="text-primary">.</span> </a></h1>
-                </div>
-
-                <div class="col-12 col-md-10 d-none d-xl-block">
-                    <nav class="site-navigation position-relative text-right" role="navigation">
-
-                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="#home-section" class="nav-link">Home</a></li>
-                            <li class="has-children">
-                                <a href="#about-section" class="nav-link">About Us</a>
-                                <ul class="dropdown">
-                                    <li><a href="#team-section" class="nav-link">Team</a></li>
-                                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                                    <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
-                                    <li><a href="#services-section" class="nav-link">Services</a></li>
-                                    <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                                    <li class="has-children">
-                                        <a href="#">More Links</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Menu One</a></li>
-                                            <li><a href="#">Menu Two</a></li>
-                                            <li><a href="#">Menu Three</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-
-                            <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                            <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-facebook"></span></a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-twitter"></span></a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-linkedin"></span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
-                        href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
-                </div>
-
-            </div>
-        </div>
-
-    </header>
+   {% block navbar %}
+        {% include '_includes/navbar.html' %}
+    {% endblock %}
 
 
     <div class="site-blocks-cover overlay" style="background-image: url({% static 'images/hero_2.jpg' %});" data-aos="fade"
@@ -118,7 +64,7 @@
                 <div class="col-md-10 mt-lg-5 text-center">
                     <div class="single-text owl-carousel">
                         <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
+                            <h1 class="text-uppercase" data-aos="fade-up">ФИНАНСОВЫЙ АНАЛИЗ</h1>
                             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti
                                 libero excepturi porro illo.</p>
@@ -128,7 +74,7 @@
                         </div>
 
                         <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
+                            <h1 class="text-uppercase" data-aos="fade-up">УПРАВЛЕНЧЕСКИЙ УЧЕТ</h1>
                             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit.
                                 Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
@@ -139,7 +85,27 @@
                         </div>
 
                         <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
+                            <h1 class="text-uppercase" data-aos="fade-up">БЮДЖЕТИРОВАНИЕ</h1>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit.
+                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
+                                illo.</p>
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                            </div>
+                        </div>
+                         <div class="slide">
+                            <h1 class="text-uppercase" data-aos="fade-up">ПОСТРОЕНИЕ ФИНАНСОВОЙ МОДЕЛИ</h1>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit.
+                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
+                                illo.</p>
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <h1 class="text-uppercase" data-aos="fade-up">Автоматизация бизнес процессов</h1>
                             <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit.
                                 Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
