update in navbar

--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -12,9 +12,9 @@
                     <nav class="site-navigation position-relative text-right" role="navigation">
 
                         <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="#home-section" class="nav-link">Home</a></li>
+
                             <li class="has-children">
-                                <a href="#about-section" class="nav-link">About Us</a>
+                                <a href="#about-section" class="nav-link">О нас</a>
                                 <ul class="dropdown">
                                     <li><a href="#team-section" class="nav-link">Team</a></li>
                                     <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
@@ -34,10 +34,8 @@
                             </li>
 
 
-                            <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                            <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-facebook"></span></a></li>
+                            <li><a href="#blog-section" class="nav-link">Блог</a></li>
+                            <li><a href="#contact-section" class="nav-link">Контакт</a></li>
                             <li class="social"><a href="#contact-section" class="nav-link"><span
                                     class="icon-twitter"></span></a></li>
                             <li class="social"><a href="#contact-section" class="nav-link"><span
