--- a/templates/base.html
+++ b/templates/base.html
@@ -62,58 +62,40 @@
 
 
                 <div class="col-md-10 mt-lg-5 text-center">
+
                     <div class="single-text owl-carousel">
                         <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">ФИНАНСОВЫЙ АНАЛИЗ</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti
-                                libero excepturi porro illo.</p>
+                            <h1 class="text-uppercase" data-aos="fade-up">Автоматизация бизнес процессов</h1>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Это процесс передачи решения рутинных задач сотрудников автоматизированным системам, который позволяет освобождать ресурсы, своевременно реагировать
+                                на изменения рынка, быстро принимать решения и распланировать дальнейшие действия компании.</p>
                             <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Cвязаться</a>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <h1 class="text-uppercase" data-aos="fade-up">ФИНАНСОВЫЙ АНАЛИЗ</h1>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Анализ основных финансовых показателей деятельности предприятия: ликвидность, оборачиваемость активов, рентабельность, рыночная стоимость.</p>
+                            <div data-aos="fade-up" data-aos-delay="100">
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Cвязаться</a>
                             </div>
                         </div>
 
-                        <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">УПРАВЛЕНЧЕСКИЙ УЧЕТ</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
-                            <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
-                            </div>
-                        </div>
 
                         <div class="slide">
                             <h1 class="text-uppercase" data-aos="fade-up">БЮДЖЕТИРОВАНИЕ</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Бюджетирование — процесс составления, исполнения, контроля и анализа исполнения бюджетов организаций.</p>
                             <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Cвязаться</a>
                             </div>
                         </div>
                          <div class="slide">
                             <h1 class="text-uppercase" data-aos="fade-up">ПОСТРОЕНИЕ ФИНАНСОВОЙ МОДЕЛИ</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
+                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Это набор характеристик, которые отражают текущее состояние дел и становятся основой для прогнозов на будущее.</p>
                             <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Cвязаться</a>
                             </div>
                         </div>
-                        <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Автоматизация бизнес процессов</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
-                            <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
-                            </div>
-                        </div>
+
 
                     </div>
                 </div>
