--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -1,55 +1,78 @@
- <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
+{% load static i18n custom_tags %}
+<header class="site-navbar js-sticky-header site-navbar-target" role="banner">
 
-        <div class="container">
-            <div class="row align-items-center">
+    <div class="container">
+        <div class="row align-items-center">
 
-                <div class="col-6 col-xl-4">
-                    <h1 class="mb-0 site-logo"><a href="#" class="h2 mb-0">SFTS Group<span
-                            class="text-primary">.</span> </a></h1>
-                </div>
-
-                <div class="col-12 col-md-8 d-none d-xl-block">
-                    <nav class="site-navigation position-relative text-right" role="navigation">
-
-                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-
-                            <li class="has-children">
-                                <a href="#about-section" class="nav-link">О нас</a>
-                                <ul class="dropdown">
-                                    <li><a href="#team-section" class="nav-link">Team</a></li>
-                                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                                    <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
-                                    <li><a href="#services-section" class="nav-link">Services</a></li>
-                                    <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                                    <li class="has-children">
-                                        <a href="#">More Links</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Menu One</a></li>
-                                            <li><a href="#">Menu Two</a></li>
-                                            <li><a href="#">Menu Three</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-
-                            <li><a href="#blog-section" class="nav-link">Блог</a></li>
-                            <li><a href="#contact-section" class="nav-link">Контакт</a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-twitter"></span></a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-linkedin"></span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
-                        href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
-                </div>
-
+            <div class="col-6 col-xl-4">
+                <h1 class="mb-0 site-logo"><a href="#" class="h2 mb-0">SFTS Group<span
+                        class="text-primary">.</span> </a></h1>
             </div>
-        </div>
 
-    </header>
+            <div class="col-12 col-md-8 d-none d-xl-block">
+                <nav class="site-navigation position-relative text-right" role="navigation">
+
+                    <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+
+                        <li class="has-children">
+                            <a href="#about-section" class="nav-link">About</a>
+                            <ul class="dropdown">
+                                <li><a href="#team-section" class="nav-link">Team</a></li>
+                                <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
+                                <li><a href="#faq-section" class="nav-link">FAQ</a></li>
+                                <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
+                                <li><a href="#services-section" class="nav-link">Services</a></li>
+                                <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
+                            </ul>
+                        </li>
+
+
+                        <li><a href="#blog-section" class="nav-link">Blog</a></li>
+                        <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                        <li class="social"><a href="#contact-section" class="nav-link"><span
+                                class="icon-twitter"></span></a></li>
+                        <li class="social"><a href="#contact-section" class="nav-link"><span
+                                class="icon-linkedin"></span></a></li>
+                        <li class="has-children">
+
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_current_language as LANGUAGE_CODE %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage"
+                               data-bs-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                {% if LANGUAGE_CODE == 'uz' %}
+                                    <img src="{% static 'images/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}"
+                                         alt="{{ LANGUAGE_CODE }}"/> {{ LANGUAGE_CODE|language_name_local }}
+                                {% else %}
+                                    <img src="{% static 'images/blank.gif' %}" class="flag flag-{{ LANGUAGE_CODE }}"
+                                         alt="{{ LANGUAGE_CODE }}"/> {{ LANGUAGE_CODE|language_name_local }}
+                                {% endif %}
+                                <i class="fas fa-chevron-down"></i>
+                            </a>
+
+                            <div class="dropdown">
+                                {% for language in LANGUAGES %}
+                                    {% if not language.0 == LANGUAGE_CODE %}
+                                        <a class="nav-link"
+                                           href="{{ request.get_full_path|lang_switch_link:language.0 }}"><img
+                                                src="{% static 'images/blank.gif' %}"
+                                                class="flag flag-{{ language.0 }}"
+                                                alt="{{ language.0 }}"/>{{ language.1 }}</a>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+
+            <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
+                    href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
+            </div>
+
+        </div>
+    </div>
+
+</header>
