update base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -299,9 +299,9 @@
                 <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
                     <div class="owl-carousel slide-one-item-alt">
-                        <img src="{% static 'images/img_1.jpg' %}" alt="Image" class="img-fluid">
+                        <img src="{% static 'images/warehouse.png' %}" alt="Image" class="img-fluid">
                         <img src="{% static 'images/img_2.jpg' %}" alt="Image" class="img-fluid">
-                        <img src="{% static 'images/img_3.jpg' %}" alt="Image" class="img-fluid">
+                        <img src="{% static 'images/telegram bot.png' %}" alt="Image" class="img-fluid">
                     </div>
                     <div class="custom-direction">
                         <a href="#" class="custom-prev"><span><span class="icon-keyboard_backspace"></span></span></a><a
@@ -313,25 +313,21 @@
 
                     <div class="owl-carousel slide-one-item-alt-text">
                         <div>
-                            <h2 class="section-title mb-3">01. Online Applications</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nisi, deserunt
-                                necessitatibus odio magnam nihil illum
-                                neque voluptas?</p>
+                            <h2 class="section-title mb-3">01. Warehouse control system</h2>
+                            <p>A WCS coordinates the movements of materials throughout the warehouse to ensure an efficient and smooth workflow from receiving to shipping</p>
 
-                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+{#                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>#}
                         </div>
                         <div>
-                            <h2 class="section-title mb-3">02. Get an approval</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nisi, deserunt
-                                necessitatibus odio magnam nihil illum neque voluptas?</p>
-                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+                            <h2 class="section-title mb-3">02. Track monitoring system</h2>
+                            <p>Track monitoring systems offer continuous operation and automated processing, alerts, data visualization, and reports. </p>
+{#                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>#}
                         </div>
                         <div>
-                            <h2 class="section-title mb-3">03. Card delivery</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore sapiente labore eius
-                                ullam? Iusto?</p>
+                            <h2 class="section-title mb-3">03. Salary bot</h2>
+                            <p>Salary bot gives information about workers salary depending on choosing month</p>
 
-                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+{#                            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>#}
                         </div>
 
                     </div>
@@ -362,7 +358,7 @@
                                 process of examining a company's performance in the context of its industry and economic
                                 environment
                                 in order to arrive at a decision or recommendation.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -377,7 +373,7 @@
                             <p class="text-justify text-truncate" style="max-width: 400px;">Financial budgeting is the
                                 process of planning company expenses and revenues for a time period. Budgets set forth
                                 the plans of management in financial terms.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -393,7 +389,7 @@
                                 mathematical representation of how a company works. It is used to forecast the business'
                                 financial performance, provide direction, and give context to uncertainty, and creating
                                 one of these models is financial modeling.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -408,7 +404,7 @@
                             <p class="text-justify text-truncate" style="max-width: 400px;">A financial investment is an
                                 asset that you put money into with the hope that it will grow or appreciate into a
                                 larger sum of money.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -425,7 +421,7 @@
                             <p class="text-justify text-truncate" style="max-width: 400px;">Enterprise resource planning
                                 (ERP) is a platform companies use to manage and integrate the essential parts of their
                                 businesses.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -441,7 +437,7 @@
                             <p class="text-justify text-truncate" style="max-width: 400px;">A CRM system helps
                                 businesses organize and centralize their information on customers, allowing for easier
                                 access and customer support. </p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -456,7 +452,7 @@
                             <h3>Website development</h3>
                             <p class="text-justify text-truncate" style="max-width: 400px;">Web development is the
                                 process of building, programming, and maintaining websites and web applications.</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
@@ -472,7 +468,7 @@
                             <p class="text-justify text-truncate" style="max-width: 400px;">Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. In, iusto eaque velit saepe
                                 nobis ipsa?</p>
-                            <p><a href="#">Learn More</a></p>
+{#                            <p><a href="#">Learn More</a></p>#}
                         </div>
                     </div>
                 </div>
