--- a/templates/base.html
+++ b/templates/base.html
@@ -657,18 +657,19 @@ Tashkent, Uzbekistan</span>
                 <div class="col-md-12 mb-5">
 
 
-                    <form action="#" class="p-5 bg-white">
+                    <form action="." method="post" class="p-5 bg-white">
+                        {% csrf_token %}
 
                         <h2 class="h4 text-black mb-5">Contact Form</h2>
 
                         <div class="row form-group">
                             <div class="col-md-6 mb-3 mb-md-0">
                                 <label class="text-black" for="fname">First Name</label>
-                                <input type="text" id="fname" class="form-control">
+                               {{ form.first_name }}
                             </div>
                             <div class="col-md-6">
                                 <label class="text-black" for="lname">Last Name</label>
-                                <input type="text" id="lname" class="form-control">
+                                {{ form.last_name }}
                             </div>
                         </div>
 
@@ -676,7 +677,7 @@ Tashkent, Uzbekistan</span>
 
                             <div class="col-md-12">
                                 <label class="text-black" for="email">Email</label>
-                                <input type="email" id="email" class="form-control">
+                                 {{ form.email }}
                             </div>
                         </div>
 
@@ -684,15 +685,14 @@ Tashkent, Uzbekistan</span>
 
                             <div class="col-md-12">
                                 <label class="text-black" for="subject">Subject</label>
-                                <input type="subject" id="subject" class="form-control">
+                                 {{ form.subject }}
                             </div>
                         </div>
 
                         <div class="row form-group">
                             <div class="col-md-12">
                                 <label class="text-black" for="message">Message</label>
-                                <textarea name="message" id="message" cols="30" rows="7" class="form-control"
-                                          placeholder="Write your notes or questions here..."></textarea>
+                                {{ form.message }}
                             </div>
                         </div>
 
