--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static i18n %}
+{% load static i18n custom_tags %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -69,7 +69,7 @@
                             <h1 class="text-uppercase"
                                 data-aos="fade-up">{% trans 'Automation of business processes' %}</h1>
                             <p class="mb-5 desc" data-aos="fade-up"
-                               data-aos-delay="100">{% trans 'This is the process of transferring solutions to routine tasks of employees to automated systems, which allows you to free up resources, respond to market changes in a timely manner, make quick decisions and plan further actions of the company.' %}</p>
+                               data-aos-delay="100">{% trans "This is the process of transferring solutions to routine tasks of employees to automated systems, which allows you to free up resources, respond to market changes in a timely manner, make quick decisions and plan further actions of the company." %}</p>
 
                         </div>
                         <div class="slide">
