update language and solved locale path

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,9 +151,9 @@
                 <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
 
                     <div class="owl-carousel slide-one-item-alt">
-                        <img src="{% static 'images/warehouse.png' %}" alt="Image" class="img-fluid">
-                        <img src="{% static 'images/img_2.jpg' %}" alt="Image" class="img-fluid">
-                        <img src="{% static 'images/telegram bot.png' %}" alt="Image" class="img-fluid">
+                        <img src="{% static 'images/warehouse.png' %}" style="width: 500px;height: 350px" alt="Image" class="img-fluid">
+                        <img src="{% static 'images/img_2.jpg' %}" style="width: 500px;height: 350px" alt="Image" class="img-fluid">
+                        <img src="{% static 'images/telegram bot.png' %}" style="width: 500px;height: 350px" alt="Image" class="img-fluid">
                     </div>
                     <div class="custom-direction">
                         <a href="#" class="custom-prev"><span><span class="icon-keyboard_backspace"></span></span></a><a
