--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <a href="#next" class="mouse smoothscroll">
+        <a href="#about-section" class="mouse smoothscroll">
         <span class="mouse-icon">
           <span class="mouse-wheel"></span>
         </span>
